# jornada-dados-python_aula_02

./: README.md  exercicios.py  pyproject.toml
